# inference-ids

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: default.yaml  validation.yaml
docker/backend/: Dockerfile  entrypoint.sh  server.properties
docker/sensor/: Dockerfile  entrypoint.sh  local.zeek
docs/: VERIFICATION.md
docs/superpowers/plans/: 2026-07-18-live-ntc-pipeline.md  2026-07-19-label-validation.md
docs/superpowers/specs/: 2026-07-19-label-validation-design.md
scripts/: replay.sh
src/inference_ids/: __main__.py  bootstrap.py  config.py  evaluate.py  factories.py  reference_model.py
src/inference_ids/adapters/: _zeek_coercion.py  feature_extractor_stub.py  json_parser.py  jsonl_sink.py  kafka_source.py  log_sink.py  multi_sink.py  pytorch_inference.py  tsv_parser.py
src/inference_ids/application/: pipeline.py
src/inference_ids/domain/: models.py  ports.py
tests/fixtures/: conn.json
tests/unit/: test_coercion.py  test_config.py  test_evaluate.py  test_feature_extractor_stub.py  test_json_parser.py  test_jsonl_sink.py  test_kafka_source.py  test_log_sink.py  test_multi_sink.py  test_parser_equivalence.py  test_pipeline.py  test_pytorch_inference.py  test_tsv_parser.py
