[project]
name = "inference-ids"
version = "0.1.0"
description = "Live network traffic classification pipeline (Zeek -> Kafka -> PyTorch)"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka>=2.3.0",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "torch>=2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inference_ids"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
